2007-04-06  Arno Rehn  <arno@arnorehn.de>

	* Added missing QItemModel.cs. Forgot to do a 'svn add' last time.

2007-04-06  Richard Dale  <rdale@foton.es>

	* Improved the code generation to fix some of the many warnings, and fixed
	  some compiler warnings in the Qyoto runtime code too.
	* Added a MonoDevelop project for the Qyoto source files

2007-04-05  Richard Dale  <rdale@foton.es>

	* Regenerated the Qyoto classes from the Qt 4.3 headers, and added new 
	  classes
	* The test for instance operator methods was changing 'operator>>' and
	  'operator<<' calls from static to instance methods, when they are
	  actually still instance methods 'Read()' and 'Write()' in C#.
	* Add some marshallers for the QVector types in the new QXmlStream*
	  classes

2007-04-03  Richard Dale  <rdale@foton.es>

	* No need to special case the metaObject() method any more when caching 
	  smoke method ids
	* After a smoke method has been called, free the GCHandle for the instance
	  on the C# side

2007-04-02  Arno Rehn  <arno@arnorehn.de>

	* Added a subclass of QAbstractItemModel called QItemModel which implements
	  the abstract methods of its super class by calling the original methods of
	  its C++ base class.
	* Added workaround in resolve_classname to return "QItemModel" instead of "QAbstractItemModel"
	  so instances of this class can be constructed. Makes calls which return a QAbstractItemModel
	  work.

2007-04-01  Richard Dale  <rdale@foton.es>

	* Replace transparent proxies to invoke methods, with a direct call to 
	  'SmokeInvocation.Invoke()' to invoke a method in the Smoke library.
	  Performance is now 20x better than two weeks ago for a test consisting
	  of 5 goes at the cannon game with force 40. The new method to call a 
	  method in the Smoke library looks like this:

		public object Invoke(	string mungedName, 
								string signature, 
								Type returnType, 
								params object[] args );
